gitops/platform/stage/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage-default-deny-all
  namespace: stage
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
